trunk/Archive2/00/cbf8cd5b55743f/output
main.cpp:16:5: error: member function 'foo' not viable: 'this' argument has type 'const A', but function is not marked const
    a.foo();
    ^
main.cpp:6:10: note: 'foo' declared here
    void foo()
         ^
1 error generated.
